v0.15.0/_sources/generated/statsmodels.genmod.generalized_estimating_equations.OrdinalGEE.rst.txt
statsmodels.genmod.generalized\_estimating\_equations.OrdinalGEE
================================================================

.. currentmodule:: statsmodels.genmod.generalized_estimating_equations

.. autoclass:: OrdinalGEE
   :exclude-members: cluster_list,compare_score_test,estimate_scale,estimate_tweedie_power,fit,fit_constrained,fit_regularized,from_formula,get_distribution,hessian,hessian_factor,information,initialize,loglike,loglike_mu,mean_deriv,mean_deriv_exog,predict,qic,score,score_factor,score_obs,score_test,setup_ordinal,update_cached_means,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~OrdinalGEE.cluster_list
      ~OrdinalGEE.compare_score_test
      ~OrdinalGEE.estimate_scale
      ~OrdinalGEE.estimate_tweedie_power
      ~OrdinalGEE.fit
      ~OrdinalGEE.fit_constrained
      ~OrdinalGEE.fit_regularized
      ~OrdinalGEE.from_formula
      ~OrdinalGEE.get_distribution
      ~OrdinalGEE.hessian
      ~OrdinalGEE.hessian_factor
      ~OrdinalGEE.information
      ~OrdinalGEE.initialize
      ~OrdinalGEE.loglike
      ~OrdinalGEE.loglike_mu
      ~OrdinalGEE.mean_deriv
      ~OrdinalGEE.mean_deriv_exog
      ~OrdinalGEE.predict
      ~OrdinalGEE.qic
      ~OrdinalGEE.score
      ~OrdinalGEE.score_factor
      ~OrdinalGEE.score_obs
      ~OrdinalGEE.score_test
      ~OrdinalGEE.setup_ordinal
      ~OrdinalGEE.update_cached_means
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~OrdinalGEE.cached_means
      ~OrdinalGEE.endog_names
      ~OrdinalGEE.exog_names
      ~OrdinalGEE.exposure_name
      ~OrdinalGEE.freq_weights_name
      ~OrdinalGEE.offset_name
      ~OrdinalGEE.var_weights_name
   
   
   